--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       - run: |
-          date > generated.txt
+          go run main.go -dir 1
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
