--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,8 @@ permissions:
   contents: write
     
 jobs:
-  build:
+  go-right:
+    if: ${{ github.event.issue.title }} == 'go right'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -17,6 +18,48 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
       - run: |
           go run main.go -dir 1
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "generated"
+          git push
+  go-down:
+    if: ${{ github.event.issue.title }} == 'go down'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - run: |
+          go run main.go -dir 2
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "generated"
+          git push
+  go-left:
+    if: ${{ github.event.issue.title }} == 'go left'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - run: |
+          go run main.go -dir 3
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "generated"
+          git push
+  go-up:
+    if: ${{ github.event.issue.title }} == 'go up'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - run: |
+          go run main.go -dir 4
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
