--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,10 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
-          git commit -m "moving east"
+          git commit -m "go right"
           git push
+      - uses: peter-evans/close-issue@v2
+
   go-down:
     if: github.event.issue.title == 'go down'
     runs-on: ubuntu-latest
@@ -37,8 +39,10 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
-          git commit -m "moving south"
+          git commit -m "go down"
           git push
+      - uses: peter-evans/close-issue@v2
+
   go-left:
     if: github.event.issue.title == 'go left'
     runs-on: ubuntu-latest
@@ -51,8 +55,10 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
-          git commit -m "moving west"
+          git commit -m "go left"
           git push
+      - uses: peter-evans/close-issue@v2
+
   go-up:
     if: github.event.issue.title == 'go up'
     runs-on: ubuntu-latest
@@ -65,6 +71,6 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add .
-          git commit -m "moving north"
+          git commit -m "go up"
           git push
-
+      - uses: peter-evans/close-issue@v2
