Add label to issues

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ permissions:
 
 jobs:
   follow-command:
+    if: contains(github.event.issue.labels.*.name, 'game-input')
     runs-on: self-hosted
     steps:
       - name: Get repository stats
